[package]
name = "aura-vm"
version = "0.1.0"
edition = "2024"

[dependencies]
wasmtime = "38.0.0"
wasmtime-wasi = "38.0.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
base64 = "0.22"
reqwest = { version = "0.12", features = ["blocking", "json"] }

[dev-dependencies]
wat = "1.0"
